--- a/flaskr/templates/raider_io/index.html
+++ b/flaskr/templates/raider_io/index.html
@@ -8,21 +8,9 @@
 {% endblock %}
 
 {% block content %}
-  {% for post in posts %}
+  {% for wow_char in wow_chars %}
     <article class="post">
-      <header>
-        <div>
-          <h1>{{ post['title'] }}</h1>
-          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
-        </div>
-        {% if g.user['id'] == post['author_id'] %}
-          <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
-        {% endif %}
-      </header>
-      <p class="body">{{ post['body'] }}</p>
+      <h1>{{ wow_char['region'], wow_char['realm'], wow_char['char_name'], wow_char['score'] }}</h1>
     </article>
-    {% if not loop.last %}
-      <hr>
-    {% endif %}
   {% endfor %}
 {% endblock %}
