--- a/flaskr/templates/raider_io/new.html
+++ b/flaskr/templates/raider_io/new.html
@@ -11,7 +11,7 @@
     <label for="realm">Realm</label>
     <input name="realm" id="realm" value="{{ request.form['realm'] }}" required>
     <label for="character">Character</label>
-    <input name="character" id="character" value="{{ request.form['character'] }}" required>
+    <input name="char_name" id="char_name" value="{{ request.form['char_name'] }}" required>
     <input type="submit" value="Save">
   </form>
 {% endblock %}
