Added some failsafes to the raider.io API call to catch any errors made. Function still needs optimising however it is now sufficent to be merged with the trunk.

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,6 +5,8 @@
 <nav>
   <h1>Flaskr</h1>
   <ul>
+    <li><a href="{{ url_for('blog.index') }}">Home</a>
+    <li><a href="{{ url_for('raider_io.index') }}">WoW Scores</a>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
