Added a home page and moved the blog to it's own page. Also included an alphabetical sort to the raider.io scores page

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -16,7 +16,8 @@
 </nav>
 <nav>
   <ul>
-    <li><a href="{{ url_for('blog.index') }}">Home</a>
+    <li><a href="{{ url_for('home.index') }}">Home</a>
+    <li><a href="{{ url_for('blog.index') }}">Blogs</a>
     <li><a href="{{ url_for('raider_io.index') }}">WoW Scores</a>
   </ul>
 </nav>
